Fix compilation and some review comments